--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zoon/rialto",
+    "name": "mrkatz/rialto",
     "description": "Manage Node resources from PHP",
     "keywords": [
         "php",
